added auto proxy
will remove in future

--- a/settings.ini
+++ b/settings.ini
@@ -1,6 +1,6 @@
 [server]
-url = https://ltvugp616.us02.horainwebs.top/
-timeout = 10
+url = https://ucrhvx616.tw01.horainwebs.top/
+timeout = 60
 
 [client]
 port = 8080
