--- a/settings.ini
+++ b/settings.ini
@@ -1,6 +1,7 @@
 [server]
-url = https://ucrhvx616.tw01.horainwebs.top/
+url = http://test.moe.boxpaper.club/
 timeout = 60
+token = 7f5ac5a9570e90930ec80c7b3cd546bb
 
 [client]
 port = 8080
