--- a/settings.ini
+++ b/settings.ini
@@ -1,5 +1,5 @@
 [server]
-url = http://test.moe.boxpaper.club/
+url = http://proxyproxy.hk03.horainwebs.top/
 timeout = 60
 token = 7f5ac5a9570e90930ec80c7b3cd546bb
 
