--- a/settings.ini
+++ b/settings.ini
@@ -1,6 +1,6 @@
 [server]
-url = http://test.moe.boxpaper.club/
-timeout = 60
+url = http://proxyproxy.hk03.horainwebs.top/,http://wssb.hk08.horainwebs.top/,http://hwet24616.hk18.horainwebs.top/
+timeout = 120
 token = 7f5ac5a9570e90930ec80c7b3cd546bb
 
 [client]
