--- a/settings.ini
+++ b/settings.ini
@@ -1,5 +1,5 @@
 [server]
-url = http://proxyproxy.hk03.horainwebs.top/,http://wssb.hk08.horainwebs.top/,http://hwet24616.hk18.horainwebs.top/
+url = http://roxy.jp06.horainwebs.top/,http://roxy.sgp07.horainwebs.top/,http://proxyproxy.hk03.horainwebs.top/,http://wssb.hk08.horainwebs.top/,http://hwet24616.hk18.horainwebs.top/
 timeout = 120
 
 token = 7f5ac5a9570e90930ec80c7b3cd546bb
